# gemm_y

./: .gitattributes  .gitignore  AGENTS.md  ARD.md  CMakeLists.txt  TODO.md
db/: gemm_y.db
scripts/: db.py  delete_run.py  dump_db.py  ingest.py  server.py
src/: Arch.h  Buffer.h  Copy.h  CudaCheck.h  CudaTimer.h  Layout.h  Matrix.h  MatrixView.h  Space.h  Time.h  Tracer.h  cuda_compat.h  dtypes.h  main.cpp
src/bench/: Accuracy.h  CsvWriter.h  Fill.h  GemmArgs.h  KernelTraits.h  Profiler.cu  Profiler.h  Stats.h  launch_overhead_microbench.cu  memcpy_microbench.cu
src/bench/microbench/: launch_overhead_microbench.cu  memcpy_microbench.cu  print_table.h
src/cublas/: CublasHandle.h  cublas_gemm.h
src/sm120/: gemm_bf16.cuh  gemm_bf16_k0.cu  gemm_bf16_naive.cu  gemm_bf16_naive.cuh  gemm_naive.cu  gemm_naive.cuh
src/sm90/: gemm_bf16.cuh  gemm_bf16_k0.cu  gemm_bf16_naive.cu  gemm_bf16_naive.cuh  gemm_naive.cu  gemm_naive.cuh
tests/: test.cu
